third_party/move/move-vm/transactional-tests/tests/function_values_safety/closure_typing.masm
//# publish
module 0x66::test

// Declares some help functions used by later tests

public fun f(captured: u64, delayed: &u64): u64
    move_loc captured
    move_loc delayed
    read_ref
    add
    ret

public fun g(delayed: &u64, captured: u64): u64
    move_loc captured
    move_loc delayed
    read_ref
    add
    ret

public fun h(delayed: &mut u64, captured: u64): u64
    move_loc captured
    move_loc delayed
    read_ref
    add
    ret

public fun assert3(x: u64)
    move_loc x
    ld_u64 3
    eq
    br_true l
    ld_u64 255
    abort
 l: ret

// ==== Closure Construction and Execution

//# run
script
use 0x66::test

fun ok()
    local delayed: u64
    ld_u64 1
    st_loc delayed
    borrow_loc delayed
    ld_u64 2
    pack_closure test::f, 1
    call_closure<|&u64|u64>
    call test::assert3
    ret

//# run --verbose
script
use 0x66::test

fun wrong_captured_ty()
    local delayed: u64
    ld_u64 1
    st_loc delayed
    borrow_loc delayed
    ld_u32 2 // ERROR
    pack_closure test::f, 1
    call_closure<|&u64|u64>
    call test::assert3
    ret

//# run --verbose
script
use 0x66::test

fun wrong_delayed_ty()
    local delayed: u32
    ld_u32 1
    st_loc delayed
    borrow_loc delayed // ERROR
    ld_u64 2
    pack_closure test::f, 1
    call_closure<|&u64|u64> // ... discovered here
    call test::assert3
    ret

//# run --verbose
script
use 0x66::test

fun wrong_closure_ty()
    local delayed: u64
    ld_u64 1
    st_loc delayed
    borrow_loc delayed
    ld_u64 2
    pack_closure test::f, 1
    call_closure<|u64|u64> // ERROR
    call test::assert3
    ret

// ==== Typing with Reversed Mask

//# run
script
use 0x66::test

fun ok_reversed_mask()
    local delayed: u64
    ld_u64 1
    st_loc delayed
    borrow_loc delayed
    ld_u64 2
    pack_closure test::g, 2
    call_closure<|&u64|u64>
    call test::assert3
    ret

//# run --verbose
script
use 0x66::test

fun wrong_captured_ty_reversed_mask()
    local delayed: u64
    ld_u64 1
    st_loc delayed
    borrow_loc delayed
    ld_u32 2 // ERROR
    pack_closure test::g, 2
    call_closure<|&u64|u64>
    call test::assert3
    ret

//# run --verbose
script
use 0x66::test

fun wrong_delayed_ty_reversed_mask()
    local delayed: u32
    ld_u32 1
    st_loc delayed
    borrow_loc delayed // ERROR here
    ld_u64 2
    pack_closure test::g, 2
    call_closure<|&u64|u64>
    call test::assert3
    ret


// =========================================
// Capturing references

//# run --verbose
script
use 0x66::test

fun capture_ref()
    local captured: u64
    ld_u64 1
    st_loc captured
    borrow_loc captured
    pack_closure test::g, 1 // ERROR
    ld_u64 2
    call_closure<|&u64|u64>
    call test::assert3
    ret

//# run --verbose
script
use 0x66::test

fun capture_mut_ref()
    local captured: u64
    ld_u64 1
    st_loc captured
    mut_borrow_loc captured
    pack_closure test::h, 1 // ERROR
    ld_u64 2
    call_closure<|&u64|u64>
    call test::assert3
    ret
